@@ -4,6 +4,7 @@
 
 === 1.0.28 ===
 * Added audio pre-mixing controls.
+* Updated build scripts and dependencies.
 
 === 1.0.27 ===
 * Updated build scripts and dependencies.
